--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "rocky.codes",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "author": "Rocky Neurock",
+  "description": "My professional home on the internet.",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -19,13 +20,20 @@
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "prettier": "2.2.1"
+    "gatsby-plugin-catch-links": "^2.10.0",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-remark-vscode": "^3.2.0",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-remark": "^2.16.0",
+    "prettier": "2.2.1",
+    "react-helmet": "^6.1.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/jneurock/rocky-codes"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/jneurock/rocky-codes/issues"
   }
 }
