--- a/package.json
+++ b/package.json
@@ -9,39 +9,44 @@
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
-      "lint": "eslint src/**/*.js",
-      "start": "npm run develop",
-      "serve": "gatsby serve",
-      "clean": "gatsby clean",
-      "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
-    },
-    "dependencies": {
-      "gatsby": "^2.26.1",
-      "react": "^16.12.0",
-      "react-dom": "^16.12.0"
-    },
-    "devDependencies": {
-      "@fortawesome/fontawesome-svg-core": "^1.2.34",
-      "@fortawesome/free-brands-svg-icons": "^5.15.2",
-      "@fortawesome/free-solid-svg-icons": "^5.15.2",
-      "@fortawesome/react-fontawesome": "^0.1.14",
-      "eslint": "^6.8.0",
-      "gatsby-plugin-catch-links": "^2.10.0",
-      "gatsby-plugin-optimize-svgs": "^1.0.5",
-      "gatsby-plugin-react-helmet": "^3.10.0",
-      "gatsby-plugin-sass": "^3.2.0",
-      "gatsby-remark-vscode": "^3.2.0",
-      "gatsby-source-filesystem": "^2.11.0",
-      "gatsby-transformer-remark": "^2.16.0",
-      "jest": "^26.6.3",
-      "prettier": "2.2.1",
-      "react-helmet": "^6.1.0"
-    },
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/jneurock/rocky-codes"
-    },
-    "bugs": {
-      "url": "https://github.com/jneurock/rocky-codes/issues"
-    }
+    "lint": "eslint src/**/*.js",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "dependencies": {
+    "gatsby": "^2.26.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.12.1",
+    "eslint": "^6.8.0",
+    "gatsby-plugin-catch-links": "^2.10.0",
+    "gatsby-plugin-optimize-svgs": "^1.0.5",
+    "gatsby-plugin-react-helmet": "^3.10.0",
+    "gatsby-plugin-sass": "^3.2.0",
+    "gatsby-remark-vscode": "^3.2.0",
+    "gatsby-source-filesystem": "^2.11.0",
+    "gatsby-transformer-remark": "^2.16.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
+    "prettier": "2.2.1",
+    "react-helmet": "^6.1.0",
+    "react-test-renderer": "^16.14.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jneurock/rocky-codes"
+  },
+  "bugs": {
+    "url": "https://github.com/jneurock/rocky-codes/issues"
   }
+}
