--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.2",
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@testing-library/react": "^11.2.5",
     "babel-jest": "^26.6.3",
     "babel-preset-gatsby": "^0.12.1",
     "eslint": "^6.8.0",
