--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-transformer-remark": "^2.16.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
+    "night-owl": "github:sdras/night-owl-vscode-theme",
     "prettier": "2.2.1",
     "react-helmet": "^6.1.0",
     "react-test-renderer": "^16.14.0"
