--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "night-owl": "github:sdras/night-owl-vscode-theme",
     "prettier": "2.2.1",
     "react-helmet": "^6.1.0",
-    "react-test-renderer": "^16.14.0"
+    "react-test-renderer": "^16.14.0",
+    "sass": "^1.32.7"
   },
   "repository": {
     "type": "git",
